--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 /Mycalculator.class
 /Trie$Node.class
 /Trie.class
+/Line.class
+/Fileimport.class
+/Juliandate.class
+/Translator.class
+/Translator$1.class
+/Translator$2.class
+/Translator$3.class
+/Translator$4.class
+/Translator$5.class
+/Hashmap.class
+/Hashmap$Node.class
+/Linearprobing.class
+/Linearprobing$Node.class
+/Counting.class
+/Circles.class
+/Countingsheep.class
+/Rectangle.class
+/Shape.class
+/Cake.class
+/Matrix.class
