--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
 /Mycalculator.class
 /Trie$Node.class
 /Trie.class
+/Hashmap.class
+/Fileimport.class
+/Juliandate.class
+/Line.class
+/Translator$1.class
+/Translator$2.class
+/Translator$3.class
+/Translator$4.class
+/Translator$5.class
+/Translator.class
+/Hashmap$Node.class
+/Linearprobing.class
+/Linearprobing$Node.class
+/Perfecthash.class
+/Quadratic.class
+/Quadratic$Node.class
+/Perfecthash$Node.class
+/Circles.class
+/Rectangle.class
+/Shape.class
+/Countingsheep.class
+/Boggle.class
+/Tri$Node.class
+/Tri.class
+/Matrix.class
+/Boggletest.class
+/Stock.class
