--- a/objectreview/.gitignore
+++ b/objectreview/.gitignore
@@ -3,3 +3,11 @@
 /Deserialization.class
 /Cloning.class
 /B.class
+/Reflection.class
+/C.class
+/D.class
+/Anonymous.class
+/E.class
+/Anonymous$1.class
+/F.class
+/J.class
