--- a/Graph/.gitignore
+++ b/Graph/.gitignore
@@ -3,3 +3,9 @@
 /graph.class
 /vertex.class
 /Vertice.class
+/testG$Edge.class
+/testG.class
+/testG$1.class
+/Kruskal.class
+/Kruskal$Edge.class
+/Kruskal$1.class
